自动加载对应的类目录

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "976724250@qq.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Cxp\\Avatar\\": "src"
+        }
+    },
     "require": {}
 }
